@@ -1,0 +1,5 @@
+#include "SusyNtuple/MCWeighter.h"
+
+using namespace std;
+
+// Nothing here yet
